[tool.poetry]
name = "lru-cache-api"
version = "0.1.0"
description = "REST API for LRU Cache with TTL support"
authors = ["Anton Zharkov <19antoni88@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "0.115.11"
uvicorn = "0.34.0"
pydantic = "2.10.6"
python-dotenv = "1.0.0"
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
httpx = "0.28.1"
pydantic-settings = "2.8.1"
colorlog = "6.9.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 80"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app", "api", "tests"]
multi_line_output = 3
include_trailing_comma = true
